[package]
name = "foxbox"
version = "0.1.0"
authors = ["fabrice <fabrice@desre.org>"]
build = "build.rs"
# Files that shouldn't retrigger a new rust build if they are changed
exclude = [ "**/*.conf",
            "node_modules/**/*", "test/**/*", "tools/**/*", "*.sh", # Non-rust scripts
            "**/*.log", "**/*.sqlite", # Application generated data
            "**/*.md", "**/*.yml"      # e.g.: READMEs, Travis
          ]

[features]
default = ["authentication"]
authentication = []

[replace]
"iron:0.3.0" = { path = "iron-fork/" }

[build-dependencies]
pkg-config = "0.3"

[dependencies]
foxbox_thinkerbell = { path = "components/thinkerbell/" }
openzwave-adapter = { path = "components/openzwave-adapter/" }
foxbox_taxonomy = { path = "components/taxonomy/" }
tls = { path = "components/tls/" }

foxbox_users = { git = "https://github.com/fxbox/users.git", rev = "44e2919" }
multicast_dns = { git = "https://github.com/fxbox/multicast-dns.git", rev = "a6e4bcc" }
iron-cors = { git = "https://github.com/fxbox/iron-cors.git", rev = "e12b71c" }

chrono = "0.2.19"
clippy = "0.0.64"
docopt = "0.6.78"
docopt_macros = "0.6.80"
env_logger = "0.3.2"
get_if_addrs = "0.3.1"
hyper = "0.8.1"
libc = "0.2.7"
log = "0.3"
mio = { git = "https://github.com/carllerche/mio.git" }
mount = "0.1.0"
nix = { git = "https://github.com/nix-rust/nix.git", rev = "138080" } # Until 0.5.1 is released
openssl = "0.7.6"
openssl-sys = "0.7.6"
rand = "0.3"
router = "0.1.0"
rust-crypto = "0.2.34"
rustc-serialize = "0.3"
rusqlite = "0.6.0"
serde = "0.7.0"
serde_json = "0.7.0"
serde_macros = "0.7.2"
staticfile = "0.2.0"
transformable_channels = "^0.1"
unicase = "1.3.0"
time = "0.1"
timer = "0.1.6"
uuid = "0.1.18"
url = "0.5.7"
ws = { git = "https://github.com/JohanLorenzo/ws-rs.git" , branch = "0.4.6" }
xml-rs = "0.3.0"

[dependencies.iron]
version = "0.3.0"
default-features = true
features = ["ssl"]

[dev-dependencies]
stainless = "0.1.4"
iron-test = "0.3.0"
regex = "0.1.55"
rand = "0.3.14"
tempdir = "0.3.4"
