[package]
name = "foxbox"
version = "0.1.0"
authors = ["fabrice <fabrice@desre.org>"]
build = "build.rs"
# Files that shouldn't retrigger a new rust build if they are changed
exclude = [ "**/*.conf", "**/*.json",
            "node_modules/**/*", "test/**/*", "tools/**/*", "*.sh", # Non-rust scripts
            "**/*.log", "**/*.sqlite", # Application generated data
            "**/*.md", "**/*.yml"      # e.g.: READMEs, Travis
          ]

[features]
default = ["authentication", "zwave"]
authentication = []
zwave = ["openzwave-adapter"]

[replace]
"iron:0.3.0" = { path = "iron-fork/" }

[build-dependencies]
pkg-config = "0.3"
rustc_version = "0.1.7"

[dependencies]
foxbox_core = { path = "components/core/" }
foxbox_thinkerbell = { path = "components/thinkerbell/" }
foxbox_taxonomy = { path = "components/taxonomy/" }
openzwave-adapter = { path = "components/openzwave-adapter/", optional = true }
tls = { path = "components/tls/" }

foxbox_users = { git = "https://github.com/fxbox/users.git", rev = "ec53c3a" }
iron-cors = { git = "https://github.com/fxbox/iron-cors.git", rev = "f397cd2" }
multicast_dns = { git = "https://github.com/fxbox/multicast-dns.git", rev = "a6e4bcc" }

chrono = "0.2.19"
clippy = "0.0.71"
docopt = "0.6.78"
docopt_macros = "0.6.80"
env_logger = "0.3.2"
#get_if_addrs = "0.3.1"
get_if_addrs = { git = "https://github.com/dhylands/get_if_addrs", rev = "23632fd3473d42d3dc5710fc7855c5979b10ce50" } # Temporary until get_if_addrs PR to update to libc 0.2 is merged
hyper = "0.8.1"
lazy_static = "^0.1"
libc = "0.2.7"
log = "0.3"
mio = "0.5.1"
mount = "0.1.0"
nix = { git = "https://github.com/nix-rust/nix.git", rev = "138080" } # Until 0.5.1 is released
openssl = "0.7.6"
openssl-sys = "0.7.6"
rand = "0.3"
router = "0.1.0"
rust-crypto = "0.2.34"
rustc-serialize = "0.3"
rusqlite = "0.6.0"
serde = "0.7.0"
serde_json = "0.7.0"
serde_macros = "0.7.2"
staticfile = "0.2.0"
transformable_channels = "^0.1"
unicase = "1.3.0"
time = "0.1"
timer = "0.1.6"
url = "0.5.7"
ws = "0.4.8"

[dependencies.iron]
version = "0.3.0"
default-features = true
features = ["ssl"]

[dev-dependencies]
stainless = "0.1.4"
iron-test = "0.3.0"
regex = "0.1.55"
rand = "0.3.14"
tempdir = "0.3.4"
uuid = "0.1.18"
