[package]
name = "foxbox_core"
version = "0.1.0"
authors = ["The Project Link Developers"]

[lib]
name = "foxbox_core"
path = "src/lib.rs"

[replace]
"iron:0.3.0" = { path = "../../iron-fork/" }

[dependencies.iron]
version = "0.3.0"
default-features = true
features = ["ssl"]

[dependencies]
clippy = "0.0.70"
foxbox_users = { git = "https://github.com/fxbox/users.git", rev = "d4e5277" }
hyper = "0.8.1"
libc = "0.2.7"
log = "0.3"
serde_json = "0.7.0"
tls = { path = "../tls/" }
ws = { git = "https://github.com/JohanLorenzo/ws-rs.git" , branch = "0.4.6" }
xml-rs = "0.3.0"

[dev-dependencies]
stainless = "0.1.4"
tempdir = "0.3.4"
uuid = "0.1.18"
