[package]
name = "foxbox_core"
version = "0.1.0"
authors = ["The Project Link Developers"]

[lib]
name = "foxbox_core"
path = "src/lib.rs"

[replace]
"iron:0.3.1" = { path = "../../iron-fork/" }

[dependencies.iron]
version = "0.3.0"
default-features = true
features = ["ssl"]

[dependencies]
clippy = "0.0.81"
foxbox_users = { git = "https://github.com/fxbox/users.git", rev = "ec53c3a" }
hyper = "0.8.1"
libc = "0.2.7"
log = "0.3"
serde_json = "0.7.0"
tls = { path = "../tls/" }
ws = "0.4.8"
xml-rs = "0.3.0"

[dev-dependencies]
stainless = "0.1.4"
tempdir = "0.3.4"
uuid = { version = "0.2.2", features = ["v4"] }
