[package]
name = "foxbox_core"
version = "0.1.0"
authors = ["The Project Link Developers"]

[lib]
name = "foxbox_core"
path = "src/lib.rs"

[dependencies.iron]
version = "0.4"
default-features = true
features = ["ssl"]

[dependencies]
clippy = "0.0"
foxbox_users = { git = "https://github.com/fxbox/users.git" }
hyper = "0.9"
libc = "0.2.7"
log = "0.3"
serde_json = "0.8"
tls = { path = "../tls/" }
ws = "0.5"
xml-rs = "0.3.0"

[dev-dependencies]
stainless = "0.1.4"
tempdir = "0.3.4"
uuid = { version = "0.3", features = ["v4"] }
