[package]
name = "openzwave-adapter"
version = "0.1.0"
authors = ["Julien Wajsberg <felash@gmail.com>"]

[dependencies]
openzwave-stateful = { git = "https://github.com/fxbox/openzwave-stateful-rust" }
foxbox_taxonomy = { git = "https://github.com/fxbox/taxonomy.git" }
transformable_channels = "^0.1"
log = "^0.3"
