[package]
name = "foxbox_thinkerbell"
version = "0.1.2"
authors = ["David Rajchenbach-Teller <dteller@mozilla.com>"]

[dependencies]
log = "0.3"
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
chrono = "0.2.19"
foxbox_taxonomy = { path = "../taxonomy/" }
rusqlite = "0.7"
transformable_channels = "*"

[dev-dependencies]
docopt = "0.6.78"
